kubernetes/argocd/httproute-ts.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-httproute-ts
spec:
  hostnames:
    - argocd.ts.weinbender.io
  parentRefs:
    - name: tailnet-gateway
      namespace: tailscale
      kind: Gateway
      group: gateway.networking.k8s.io
  rules:
    - backendRefs:
        - kind: Service
          name: argocd-server
          namespace: argocd
          port: 80
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
