kubernetes/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
spec:
  hostnames:
    - argocd.k8s.weinbender.io
  parentRefs:
    - name: cluster-gateway
      namespace: envoy-gateway-system
  backendRefs:
    - kind: Service
      name: argocd-server
      namespace: argocd
      port: 80
